--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "cdk-serverless-app",
   "version": "0.1.0",
-  "bin": {
-    "cdk-serverless-app": "bin/cdk-serverless-app.js"
-  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -20,9 +17,7 @@
     "typescript": "~3.6.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-sns": "^1.15.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.15.0",
-    "@aws-cdk/aws-sqs": "^1.15.0",
+    "@aws-cdk/aws-dynamodb": "^1.15.0",
     "@aws-cdk/core": "^1.15.0"
   }
 }
