--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-dynamodb": "^1.15.0",
+    "@aws-cdk/aws-lambda": "^1.15.0",
     "@aws-cdk/core": "^1.15.0"
   }
 }
