--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "~3.6.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.15.0",
     "@aws-cdk/aws-dynamodb": "^1.15.0",
     "@aws-cdk/aws-lambda": "^1.15.0",
     "@aws-cdk/core": "^1.15.0"
